--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,31 @@ services:
       SONARQUBE_JDBC_PASSWORD: ${DB_PASSWORD}
       SONARQUBE_JDBC_URL: jdbc:postgresql://sq-database:5432/sonarqube
 
+  redmine:
+    # Not used two volumne mount and cp to tmp to correct path.
+    image: redmine:4.1.5
+    restart: always
+    ports:
+      - '32748:3000'
+    volumes:
+      - redmine-configuration.yml:/usr/src/redmine/config/configuration.yml
+      - data/redmine:/usr/src/redmine/files
+    environment:
+      REDMINE_DB_POSTGRES: redmine-db
+      REDMINE_DB_PASSWORD: ${REDMINE_DB_PASSWORD}
+      REDMINE_DB_DATABASE: redmine_database
+      REDMINE_SECRET_KEY_BASE: ${REDMINE_DB_PASSWORD}
+
+  redmine-db:
+    image: postgres:12
+    ports:
+      - '32749:5432'
+    volumes:
+      - .data/redmine-db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: ${REDMINE_DB_PASSWORD}
+      POSTGRES_DB: redmine_database
+
 volumes:
   gitlab-data:
     driver: local
