--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DEFAULT_PASSWORD='IIIdevops123!'
-DB_PASSWORD='IIIdevops123!'
+RM_DB_PASSWORD='IIIdevops123!'
+SQ_DB_PASSWORD='IIIdevops123!'
 IP_ADDR='10.20.2.212'
