--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,25 @@
-version: '3'
+version: "3"
 
 services:
   gitlab:
-    image: 'gitlab/gitlab-ce:13.12.15-ce.0'
+    image: gitlab/gitlab-ce:13.12.15-ce.0
+    container_name: "gitlab"
     restart: always
-    hostname: '${IP_ADDR}'
+    hostname: "${IP_ADDR}"
     ports:
-      - '32080:80'
+      - "32080:32080"
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://${IP_ADDR}'
+        external_url 'http://${IP_ADDR}:32080'
         prometheus_monitoring['enable'] = false
         gitlab_rails['initial_root_password'] = '${DEFAULT_PASSWORD}'
         unicorn['worker_processes'] = 2
         sidekiq['concurrency'] = 9
         gitlab_rails['gitlab_default_projects_features_container_registry'] = false
     volumes:
-      - 'gitlab-config:/etc/gitlab'
-      - 'gitlab-logs:/var/log/gitlab'
-      - 'gitlab-data:/var/opt/gitlab'
+      - "gitlab-config:/etc/gitlab"
+      - "gitlab-logs:/var/log/gitlab"
+      - "gitlab-data:/var/opt/gitlab"
 
   runner:
     image: gitlab/gitlab-runner:latest
@@ -34,24 +35,52 @@ services:
 
   sq-database:
     image: docker.io/bitnami/postgresql:15
+    container_name: "sonarqube-database"
     volumes:
       - sonarqube-data:/bitnami/postgresql
     environment:
       POSTGRESQL_USERNAME: postgres
-      POSTGRESQL_PASSWORD: ${DB_PASSWORD}
+      POSTGRESQL_PASSWORD: ${SQ_DB_PASSWORD}
       POSTGRESQL_DATABASE: sonarqube
 
   sonarqube:
-    image: 'sonarqube:8.9.6-community'
+    image: sonarqube:8.9.6-community
+    container_name: "sonarqube"
     restart: always
     depends_on:
       - sq-database
     ports:
-      - '31910:9000'
+      - "31910:9000"
     environment:
       SONARQUBE_JDBC_USERNAME: postgres
-      SONARQUBE_JDBC_PASSWORD: ${DB_PASSWORD}
+      SONARQUBE_JDBC_PASSWORD: ${SQ_DB_PASSWORD}
       SONARQUBE_JDBC_URL: jdbc:postgresql://sq-database:5432/sonarqube
+
+  rm-database:
+    image: docker.io/bitnami/postgresql:15
+    container_name: "redmine-database"
+    volumes:
+      - redmine-database:/bitnami/postgresql
+    environment:
+      POSTGRESQL_USERNAME: postgres
+      POSTGRESQL_PASSWORD: ${RM_DB_PASSWORD}
+      POSTGRESQL_DATABASE: redmine
+
+  redmine:
+    image: redmine:4.1.5
+    container_name: "redmine"
+    restart: always
+    volumes:
+      - redmine-config:/usr/src/redmine/config
+      - redmine-files:/usr/src/redmine/files
+      - redmine-plugins:/usr/src/redmine/plugins
+    ports:
+      - "32748:3000"
+    environment:
+      REDMINE_DB_POSTGRES: rm-database
+      REDMINE_DB_PASSWORD: ${RM_DB_PASSWORD}
+      REDMINE_DB_DATABASE: redmine
+      REDMINE_SECRET_KEY_BASE: ${RM_DB_PASSWORD}
 
 volumes:
   gitlab-data:
@@ -65,4 +94,13 @@ volumes:
     driver: local
 
   sonarqube-data:
+    driver: local
+
+  redmine-database:
+    driver: local
+  redmine-config:
+    driver: local
+  redmine-files:
+    driver: local
+  redmine-plugins:
     driver: local
