Implement redmine deploy

--- a/.env
+++ b/.env
@@ -1,15 +1,6 @@
 DEFAULT_PASSWORD='IIIdevops123!'
 DB_PASSWORD='IIIdevops123!'
-# IP_ADDR='10.20.2.212'
-IP_ADDR='10.20.0.100'
+IP_ADDR='10.20.2.212'
 REDMINE_DB_PASSWORD='IIIdevops123!'
+REDMINE_PORT='32748'
 
-
-# REDMINE_ADMIN_KEY=sha1_hex(random_password(20));
-# REDMINE_SALT=md5_hex($redmine_db_passwd)
-# hashed_password = sha1_hex($salt.sha1_hex($redmine_admin_passwd))
-# REDMINE_DOMAIN_NAME = devops_domain_name
-
-# IIIDEVOPSDB_PASSWORD='LZvYLJsfbFKJabQg8hiDuPwZ'
-# IIIDEVOPSDB_USER='postgres'
-# IIIDEVOPSDB_NAME='devopsdb'
