--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-DEFAULT_PASSWORD='IIIdevops123!'
-RM_DB_PASSWORD='IIIdevops123!'
+GITLAB_ROOT_PASSWORD='IIIdevops123!'
+GITLAB_PORT='32080'
+
 SQ_DB_PASSWORD='IIIdevops123!'
-IP_ADDR='10.20.2.212'
+SQ_PORT='31910'
+
 REDMINE_DB_PASSWORD='IIIdevops123!'
 REDMINE_PORT='32748'
 
+IP_ADDR='10.20.2.212'
