[Feat] Implement sonarqube deploymeny

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ GITLAB_ROOT_PASSWORD='IIIdevops123!'
 GITLAB_PORT='32080'
 
 SQ_DB_PASSWORD='IIIdevops123!'
+SQ_AM_PASSWORD='IIIdevops123!'
 SQ_PORT='31910'
 
 REDMINE_DB_PASSWORD='IIIdevops123!'
