--- a/.env
+++ b/.env
@@ -8,4 +8,11 @@ SQ_PORT='31910'
 REDMINE_DB_PASSWORD='IIIdevops123!'
 REDMINE_PORT='32748'
 
+III_DB_PORT='31403'
+III_DB_PASSWORD='IIIdevops123!'
+III_PORT='10009'
+III_ADMIN_LOGIN="sysadmin"
+III_ADMIN_EMAIL="tech@iii-devops.org"
+III_ADMIN_PASSWORD="IIIdevops123!"
+
 IP_ADDR='10.20.2.212'
