--- a/devops-api/requirements.txt
+++ b/devops-api/requirements.txt
@@ -27,6 +27,7 @@ python-dateutil==2.8.2
 python-gitlab==3.5.0
 python-redmine==2.3.0
 pytz==2022.1
+PyYAML==6.0
 redis==4.3.3
 requests==2.27.1
 rstr==3.2.0
