✨ Add debian support and setup script update

--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ III_ADMIN_LOGIN="sysadmin"
 III_ADMIN_EMAIL="tech@iii-devops.org"
 III_ADMIN_PASSWORD="IIIdevops123!"
 
-IP_ADDR='10.20.2.212'
+IP_ADDR=''
