🐛 Fix permission issue

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - CI_SERVER_URL=http://gitlab:${GITLAB_PORT}/
     volumes:
       - runner-config:/etc/gitlab-runner
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ${XDG_RUNTIME_DIR}/docker.sock:/var/run/docker.sock
 
   sq-database:
     image: docker.io/bitnami/postgresql:15
