--- a/templates/java_gradle/.gitlab-ci.yml
+++ b/templates/java_gradle/.gitlab-ci.yml
@@ -1,8 +1,35 @@
 stages:
-  - build 
-build-and-sonarqube:
-  stage: build
-  image: harbor-dev3.iiidevops.org/java8-gradle5-offline/master
-  script: 
+  - prepare
+  - build-and-scan
+
+prepare-variable-debug:
+  stage: prepare
+  before_script:
+    - apk add --update curl && rm -rf /var/cache/apk/*
+  script:
+    - curl --location -s --request POST "${API_ORIGIN}/project/issues_commit_by_name" --form 'project_name="'"$CI_PROJECT_NAME"'"'
+  allow_failure: true
+
+build-and-scaner-sonarqube:
+  stage: build-and-scan
+  image:
+    name: jesus28713/0308_java_gradle:latest
+    entrypoint: [ "" ]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  before_script:
+    - echo "SonarQube URL is '$SONAR_HOST_URL'"
+    - echo "Setting up SonarQube Scanner..."
+    - echo "sonar.projectKey=$CI_PROJECT_NAME" > sonar-project.properties
+    - echo "sonar.projectVersion=$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA" >> sonar-project.properties
+    - echo "sonar.scm.disabled=true" >> sonar-project.properties
+    - echo -e "Properties is \n'$(cat sonar-project.properties)'"
+  script:
     - cd app && chmod -R 777 .
     - ./gradlew build jacocoTestReport  sonarqube -Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_TOKEN} -Dsonar.log.level=DEBUG
+  allow_failure: true
