✨ Add import template

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
     volumes:
       - runner-config:/etc/gitlab-runner
       - ${XDG_RUNTIME_DIR}/docker.sock:/var/run/docker.sock
+      - ./templates:/templates
 
   sq-database:
     image: docker.io/bitnami/postgresql:15
