--- a/templates/default-dev/.gitlab-ci.yml.yml
+++ b/templates/default-dev/.gitlab-ci.yml.yml
@@ -13,7 +13,7 @@ prepare-variable-debug:
 scaner-sonarqube:
   stage: scaner
   image:
-    name: sonarsource/sonar-scanner-cli:latest
+    name: sonarsource/sonar-scanner-cli:4.8
     entrypoint: [ "" ]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
