移除範本不需要檔案與調整一致化

--- a/templates/java_gradle/.gitlab-ci.yml
+++ b/templates/java_gradle/.gitlab-ci.yml
@@ -13,7 +13,7 @@ prepare-variable-debug:
 build-and-scaner-sonarqube:
   stage: build-and-scan
   image: 
-    name: harbor-dev3.iiidevops.org/library/java_8_gradle_5.6:2.0
+    name: iiiorg/sonarqube-runner:gradle-jdk11-1.1.0
     entrypoint: [ "" ]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
