--- a/templates/java_gradle/.gitlab-ci.yml
+++ b/templates/java_gradle/.gitlab-ci.yml
@@ -23,12 +23,6 @@ build-and-scaner-sonarqube:
     paths:
       - .sonar/cache
   script:
-    - cd app && chmod -R 777 .
-    - ./gradlew build jacocoTestReport sonarqube 
-      -Dsonar.host.url=$SONAR_HOST_URL 
-      -Dsonar.login=$SONAR_TOKEN 
-      -Dsonar.log.level=DEBUG 
-      -Dsonar.projectKey=$CI_PROJECT_NAME 
-      -Dsonar.projectVersion=$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA 
-      -Dsonar.scm.disabled=true
+    - chmod a+x ./iiidevops/sonarqube/*
+    - ./iiidevops/sonarqube/SonarScan
   allow_failure: true
