--- a/templates/default-dev/.gitlab-ci.yml
+++ b/templates/default-dev/.gitlab-ci.yml
@@ -13,7 +13,7 @@ prepare-variable-debug:
 scaner-sonarqube:
   stage: scaner
   image:
-    name: sonarsource/sonar-scanner-cli:4.8
+    name: iiiorg/sonarqube-runner:1.1.0
     entrypoint: [ "" ]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
@@ -22,14 +22,8 @@ scaner-sonarqube:
     key: "${CI_JOB_NAME}"
     paths:
       - .sonar/cache
-  before_script:
-    - echo "SonarQube URL is '$SONAR_HOST_URL'"
-    - echo "Setting up SonarQube Scanner..."
-    - echo "sonar.projectKey=$CI_PROJECT_NAME" > sonar-project.properties
-    - echo "sonar.projectVersion=$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA" >> sonar-project.properties
-    - echo "sonar.scm.disabled=true" >> sonar-project.properties
-    - echo -e "Properties is \n'$(cat sonar-project.properties)'"
   script:
-    - sonar-scanner
+    - chmod a+x ./iiidevops/sonarqube/*
+    - ./iiidevops/sonarqube/SonarScan
   allow_failure: true
 
