--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,9 +32,9 @@ services:
       - ${XDG_RUNTIME_DIR}/docker.sock:/var/run/docker.sock
       - ./templates:/templates
 
-  sq-database:
+  sonarqube-db:
     image: docker.io/bitnami/postgresql:15
-    container_name: "sonarqube-database"
+    container_name: "sonarqube-db"
     restart: always
     volumes:
       - sonarqube-data:/bitnami/postgresql
@@ -48,17 +48,17 @@ services:
     container_name: "sonarqube"
     restart: always
     depends_on:
-      - sq-database
+      - sonarqube-db
     ports:
       - "${SQ_PORT}:9000"
     environment:
       SONARQUBE_JDBC_USERNAME: postgres
       SONARQUBE_JDBC_PASSWORD: ${SQ_DB_PASSWORD}
-      SONARQUBE_JDBC_URL: jdbc:postgresql://sq-database:5432/sonarqube
+      SONARQUBE_JDBC_URL: jdbc:postgresql://sonarqube-db:5432/sonarqube
 
-  rm-database:
+  redmine-db:
     image: postgres:12
-    container_name: "redmine-database"
+    container_name: "redmine-db"
     restart: always
     volumes:
       - redmine-db-data:/var/lib/postgresql/data
@@ -68,32 +68,61 @@ services:
       POSTGRES_DB: redmine_database
 
   redmine:
-    container_name: "redmine"
     image: redmine:4.1.5
-    depends_on:
-      - rm-database
+    container_name: "redmine"
     restart: always
+    depends_on:
+      - redmine-db
     ports:
       - "${REDMINE_PORT}:3000"
     volumes:
       - ./redmine-configuration.yml:/usr/src/redmine/config/configuration.yml
       - redmine-files:/usr/src/redmine/files
     environment:
-      REDMINE_DB_POSTGRES: rm-database
+      REDMINE_DB_POSTGRES: redmine-db
       REDMINE_DB_PASSWORD: ${REDMINE_DB_PASSWORD}
       REDMINE_DB_DATABASE: redmine_database
       REDMINE_SECRET_KEY_BASE: ${REDMINE_DB_PASSWORD}
 
-  iii:
+  redis:
+    image: redis:6.2.6
+    container_name: "redis"
+    restart: always
+    ports:
+      - "31999:6379"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
+
+  iii-devops-lite-db:
+    image: postgres:12
+    container_name: "iii-devops-lite-db"
+    restart: always
+    ports:
+      - "${III_DB_PORT}:5432"
+    volumes:
+      - iii-devops-lite-db-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: ${III_DB_PASSWORD}
+
+  iii-devops-lite-api:
     image: iiiorg/devops-lite-api:0.0.1
+    container_name: "iii-devops-lite-api"
+    restart: on-failure
+    depends_on:
+      - gitlab
+      - sonarqube
+      - redmine
+      - redis
+      - iii-devops-lite-db
     ports:
       - "${III_PORT}:10009"
-    restart: on-failure
     volumes:
       - ./environments.json:/environments.json
-      - iii-log:/logs
+      - iii-devops-lite-file:/opt/nfs
+      - iii-devops-lite-log:/logs
     environment:
-      SQLALCHEMY_DATABASE_URI: postgresql://postgres:${III_DB_PASSWORD}@iii-database:5432/devopsdb
+      SQLALCHEMY_DATABASE_URI: postgresql://postgres:${III_DB_PASSWORD}@iii-devops-lite-db:5432/devopsdb
       SQLALCHEMY_TRACK_MODIFICATIONS: false
       WTF_CSRF_CHECK_DEFAULT: false
       JSON_AS_ASCII: false
@@ -112,35 +141,16 @@ services:
       DEPLOYER_NODE_IP: ${IP_ADDR}
       REDIS_BASE_URL: redis:6379
 
-  iii-ui:
+  iii-devops-lite-ui:
     image: iiiorg/devops-lite-ui:0.0.1
+    container_name: "iii-devops-lite-ui"
+    restart: on-failure
+    depends_on:
+      - iii-devops-lite-api
     ports:
-      - "80:80"
-    volumes:
-      - iii-ui-data:/opt/nfs
+      - "8080:80"
     environment:
-      API_URL: http://iii:10009/
-
-  iii-database:
-    image: postgres:12
-    container_name: "iii-database"
-    restart: always
-    ports:
-      - "${III_DB_PORT}:5432"
-    volumes:
-      - iii-db-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: ${III_DB_PASSWORD}
-
-  redis:
-    image: redis:6.2.6
-    container_name: "redis"
-    restart: always
-    ports:
-      - "31999:6379"
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    command: redis-server /usr/local/etc/redis/redis.conf
+      API_URL: http://iii-devops-lite-api:10009/
 
 volumes:
   gitlab-data:
@@ -162,11 +172,11 @@ volumes:
   redmine-files:
     driver: local
 
-  iii-log:
+  iii-devops-lite-db-data:
     driver: local
 
-  iii-db-data:
+  iii-devops-lite-file:
     driver: local
 
-  iii-ui-data:
+  iii-devops-lite-log:
     driver: local
