🐛 Fix password read issue ✨ Change generate docker socket script

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
-GITLAB_ROOT_PASSWORD='{{PASSWORD}}'
-GITLAB_PORT='32080'
+GITLAB_ROOT_PASSWORD="{{PASSWORD}}"
+GITLAB_PORT="32080"
 
-SQ_DB_PASSWORD='{{PASSWORD}}'
-SQ_AM_PASSWORD='{{PASSWORD}}'
-SQ_PORT='31910'
+SQ_DB_PASSWORD="{{PASSWORD}}"
+SQ_AM_PASSWORD="{{PASSWORD}}"
+SQ_PORT="31910"
 
-REDMINE_DB_PASSWORD='{{PASSWORD}}'
-REDMINE_PORT='32748'
+REDMINE_DB_PASSWORD="{{PASSWORD}}"
+REDMINE_PORT="32748"
 
-III_DB_PORT='31403'
-III_DB_PASSWORD='{{PASSWORD}}'
+III_DB_PORT="31403"
+III_DB_PASSWORD="{{PASSWORD}}"
 
-III_PORT='10009'
-III_ADMIN_LOGIN='{{III_ADMIN_LOGIN}}'
-III_ADMIN_EMAIL='{{III_ADMIN_EMAIL}}'
-III_ADMIN_PASSWORD='{{PASSWORD}}'
+III_PORT="10009"
+III_ADMIN_LOGIN="{{III_ADMIN_LOGIN}}"
+III_ADMIN_EMAIL="{{III_ADMIN_EMAIL}}"
+III_ADMIN_PASSWORD="{{PASSWORD}}"
 
-IP_ADDR='{{IP_ADDR}}'
+IP_ADDR="{{IP_ADDR}}"
 
 # For rootless docker
 #   Get it via: echo "${XDG_RUNTIME_DIR}/docker.sock"
@@ -24,4 +24,4 @@ IP_ADDR='{{IP_ADDR}}'
 #   See: https://docs.docker.com/engine/security/rootless/
 # Rootful docker
 #   Value: /var/run/docker.sock
-DOCKER_SOCKET=''
+DOCKER_SOCKET=""
