--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   gitlab:
-    image: harbor-iso3.iiidevops.org/dockerhub/gitlab/gitlab-ce:13.12.15-ce.0
+    image: gitlab/gitlab-ce:13.12.15-ce.0
     container_name: "gitlab"
     restart: always
     hostname: "${IP_ADDR}"
@@ -22,7 +22,7 @@ services:
       - "gitlab-data:/var/opt/gitlab"
 
   runner:
-    image: harbor-iso3.iiidevops.org/dockerhub/gitlab/gitlab-runner:alpine-v15.8.2
+    image: gitlab/gitlab-runner:alpine-v15.8.2
     container_name: "gitlab-runner"
     restart: always
     environment:
@@ -33,7 +33,7 @@ services:
       - ./templates:/templates
 
   sonarqube-db:
-    image: harbor-iso3.iiidevops.org/dockerhub/bitnami/postgresql:15
+    image: bitnami/postgresql:15
     container_name: "sonarqube-db"
     restart: always
     volumes:
@@ -44,7 +44,7 @@ services:
       POSTGRESQL_DATABASE: sonarqube
 
   sonarqube:
-    image: harbor-iso3.iiidevops.org/dockerhub/library/sonarqube:8.9.6-community
+    image: sonarqube:8.9.6-community
     container_name: "sonarqube"
     restart: always
     depends_on:
@@ -57,7 +57,7 @@ services:
       SONARQUBE_JDBC_URL: jdbc:postgresql://sonarqube-db:5432/sonarqube
 
   redmine-db:
-    image: harbor-iso3.iiidevops.org/dockerhub/library/postgres:12
+    image: postgres:12
     container_name: "redmine-db"
     restart: always
     volumes:
@@ -68,7 +68,7 @@ services:
       POSTGRES_DB: redmine_database
 
   redmine:
-    image: harbor-iso3.iiidevops.org/dockerhub/library/redmine:4.1.5
+    image: redmine:4.1.5
     container_name: "redmine"
     restart: always
     depends_on:
@@ -85,7 +85,7 @@ services:
       REDMINE_SECRET_KEY_BASE: ${REDMINE_DB_PASSWORD}
 
   redis:
-    image: harbor-iso3.iiidevops.org/dockerhub/library/redis:6.2.6
+    image: redis:6.2.6
     container_name: "redis"
     restart: always
     ports:
@@ -95,7 +95,7 @@ services:
     command: redis-server /usr/local/etc/redis/redis.conf
 
   iii-devops-lite-db:
-    image: harbor-iso3.iiidevops.org/dockerhub/library/postgres:12
+    image: postgres:12
     container_name: "iii-devops-lite-db"
     restart: always
     ports:
@@ -106,7 +106,7 @@ services:
       POSTGRES_PASSWORD: ${III_DB_PASSWORD}
 
   iii-devops-lite-api:
-    image: harbor-iso3.iiidevops.org/dockerhub/iiiorg/devops-lite-api:0.0.1
+    image: iiiorg/devops-lite-api:0.0.2
     container_name: "iii-devops-lite-api"
     restart: on-failure
     depends_on:
@@ -142,7 +142,7 @@ services:
       REDIS_BASE_URL: redis:6379
 
   iii-devops-lite-ui:
-    image: harbor-iso3.iiidevops.org/dockerhub/iiiorg/devops-lite-ui:0.0.1
+    image: iiiorg/devops-lite-ui:0.0.2
     container_name: "iii-devops-lite-ui"
     restart: on-failure
     depends_on:
@@ -159,7 +159,6 @@ volumes:
     driver: local
   gitlab-logs:
     driver: local
-
   runner-config:
     driver: local
 
@@ -168,15 +167,12 @@ volumes:
 
   redmine-db-data:
     driver: local
-
   redmine-files:
     driver: local
 
   iii-devops-lite-db-data:
     driver: local
-
   iii-devops-lite-file:
     driver: local
-
   iii-devops-lite-log:
     driver: local
