--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -106,7 +106,7 @@ services:
       POSTGRES_PASSWORD: ${III_DB_PASSWORD}
 
   iii-devops-lite-api:
-    image: iiiorg/devops-lite-api:0.0.2
+    image: iiiorg/devops-lite-api:0.0.3
     container_name: "iii-devops-lite-api"
     restart: on-failure
     depends_on:
@@ -142,9 +142,9 @@ services:
       REDIS_BASE_URL: redis:6379
 
   iii-devops-lite-ui:
-    image: iiiorg/devops-lite-ui:0.0.2
+    image: iiiorg/devops-lite-ui:0.0.3
     container_name: "iii-devops-lite-ui"
-    restart: on-failure
+    restart: always
     depends_on:
       - iii-devops-lite-api
     ports:
