Add environment key 'GITLAB_EXTERNAL_BASE_URL' to docker-compose.yml for iii-devops-lite-api

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -131,6 +131,7 @@ services:
       REDMINE_ADMIN_ACCOUNT: admin
       REDMINE_ADMIN_PASSWORD: ${REDMINE_DB_PASSWORD}
       GITLAB_BASE_URL: http://gitlab:${GITLAB_PORT}
+      GITLAB_EXTERNAL_BASE_URL: http://${IP_ADDR}:${GITLAB_PORT}
       GITLAB_ADMIN_ACCOUNT: root
       GITLAB_ADMIN_PASSWORD: ${GITLAB_ROOT_PASSWORD}
       SONARQUBE_INTERNAL_BASE_URL: http://sonarqube:9000/api
