Set URLs for GitLab, SonarQube, and Redmine in .env file.

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ III_ADMIN_EMAIL="{{III_ADMIN_EMAIL}}"
 III_ADMIN_PASSWORD="{{PASSWORD}}"
 
 IP_ADDR="{{IP_ADDR}}"
+GITLAB_URL="http://$IP_ADDR:$GITLAB_PORT"
+SQ_URL="http://$IP_ADDR:$SQ_PORT"
+REDMINE_URL="http://$IP_ADDR:$REDMINE_PORT"
 
 # For rootless docker
 #   Get it via: echo "${XDG_RUNTIME_DIR}/docker.sock"
