--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -127,15 +127,15 @@ services:
       WTF_CSRF_CHECK_DEFAULT: false
       JSON_AS_ASCII: false
       REDMINE_INTERNAL_BASE_URL: http://redmine:3000
-      REDMINE_EXTERNAL_BASE_URL: http://${IP_ADDR}:${REDMINE_PORT}
+      REDMINE_EXTERNAL_BASE_URL: ${REDMINE_URL}
       REDMINE_ADMIN_ACCOUNT: admin
       REDMINE_ADMIN_PASSWORD: ${REDMINE_DB_PASSWORD}
       GITLAB_BASE_URL: http://gitlab:${GITLAB_PORT}
-      GITLAB_EXTERNAL_BASE_URL: http://${IP_ADDR}:${GITLAB_PORT}
+      GITLAB_EXTERNAL_BASE_URL: ${GITLAB_URL}
       GITLAB_ADMIN_ACCOUNT: root
       GITLAB_ADMIN_PASSWORD: ${GITLAB_ROOT_PASSWORD}
       SONARQUBE_INTERNAL_BASE_URL: http://sonarqube:9000/api
-      SONARQUBE_EXTERNAL_BASE_URL: http://${IP_ADDR}:${SQ_PORT}
+      SONARQUBE_EXTERNAL_BASE_URL: ${SQ_URL}
       ADMIN_INIT_LOGIN: ${III_ADMIN_LOGIN}
       ADMIN_INIT_EMAIL: ${III_ADMIN_EMAIL}
       ADMIN_INIT_PASSWORD: ${III_ADMIN_PASSWORD}
