✨ Add backup/restore script for GitLab

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       - "gitlab-config:/etc/gitlab"
       - "gitlab-logs:/var/log/gitlab"
       - "gitlab-data:/var/opt/gitlab"
+    healthcheck:
+      disable: false
 
   runner:
     image: gitlab/gitlab-runner:alpine-v15.10.0
