--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -108,9 +108,10 @@ services:
       POSTGRES_PASSWORD: ${III_DB_PASSWORD}
 
   iii-devops-lite-api:
-    image: iiiorg/devops-lite-api:0.0.7
+    extends:
+      file: docker-compose.iiidevops.yaml
+      service: backend-base
     container_name: "iii-devops-lite-api"
-    restart: on-failure
     depends_on:
       - gitlab
       - sonarqube
@@ -120,53 +121,28 @@ services:
     ports:
       - "${III_PORT}:10009"
     volumes:
-      - ./environments.json:/environments.json
       - iii-devops-lite-file:/opt/nfs
       - iii-devops-lite-log:/logs
-    environment: &iii_environment
-      SQLALCHEMY_DATABASE_URI: postgresql://postgres:${III_DB_PASSWORD}@iii-devops-lite-db:5432/devopsdb
-      SQLALCHEMY_TRACK_MODIFICATIONS: false
-      WTF_CSRF_CHECK_DEFAULT: false
-      JSON_AS_ASCII: false
-      REDMINE_INTERNAL_BASE_URL: http://redmine:3000
-      REDMINE_EXTERNAL_BASE_URL: ${REDMINE_URL}
-      REDMINE_ADMIN_ACCOUNT: admin
-      REDMINE_ADMIN_PASSWORD: ${REDMINE_DB_PASSWORD}
-      GITLAB_BASE_URL: http://gitlab:${GITLAB_PORT}
-      GITLAB_EXTERNAL_BASE_URL: ${GITLAB_URL}
-      GITLAB_ADMIN_ACCOUNT: root
-      GITLAB_ADMIN_PASSWORD: ${GITLAB_ROOT_PASSWORD}
-      SONARQUBE_INTERNAL_BASE_URL: http://sonarqube:9000/api
-      SONARQUBE_EXTERNAL_BASE_URL: ${SQ_URL}
-      ADMIN_INIT_LOGIN: ${III_ADMIN_LOGIN}
-      ADMIN_INIT_EMAIL: ${III_ADMIN_EMAIL}
-      ADMIN_INIT_PASSWORD: ${III_ADMIN_PASSWORD}
-      DEPLOYER_NODE_IP: ${IP_ADDR}
-      REDIS_BASE_URL: redis:6379
 
   iii-devops-lite-api-worker:
-    image: iiiorg/devops-lite-api:0.0.7
+    extends:
+      file: docker-compose.iiidevops.yaml
+      service: backend-base
     container_name: "iii-devops-lite-api-worker"
-    restart: on-failure
     depends_on:
       - redis
       - iii-devops-lite-api
     command: celery -A apis.api:celery worker -P eventlet --loglevel=INFO
-    volumes:
-      - ./environments.json:/environments.json
-    environment: 
-      <<: *iii_environment
   
   iii-devops-lite-api-beat:
-    image: iiiorg/devops-lite-api:0.0.7
+    extends:
+      file: docker-compose.iiidevops.yaml
+      service: backend-base
     container_name: "iii-devops-lite-api-beat"
-    restart: on-failure
     depends_on:
       - redis
       - iii-devops-lite-api
     command: celery -A apis.api.celery beat --loglevel=INFO --schedule=/tmp/celerybeat-schedule
-    environment: 
-      <<: *iii_environment
 
   iii-devops-lite-ui:
     image: iiiorg/devops-lite-ui:0.0.7
