--- a/docker-compose.iiidevops.yaml
+++ b/docker-compose.iiidevops.yaml
@@ -7,7 +7,7 @@ version: "3"
 services:
   backend-base:
     image: iiiorg/devops-lite-api:0.0.7
-    restart: on-failure
+    restart: always
     volumes:
       - ./environments.json:/environments.json
     # We don't share depends_on with other services, because it's docker limit
