--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,15 @@
 version: "3"
 
+x-logging:
+  service: &default-logging
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
+
 services:
   gitlab:
+    <<: *default-logging
     image: gitlab/gitlab-ce:13.12.15-ce.0
     container_name: "gitlab"
     restart: always
@@ -24,6 +32,7 @@ services:
       disable: false
 
   runner:
+    <<: *default-logging
     image: gitlab/gitlab-runner:alpine-v15.10.0
     container_name: "gitlab-runner"
     restart: always
@@ -35,6 +44,7 @@ services:
       - ./templates:/templates
 
   sonarqube-db:
+    <<: *default-logging
     image: bitnami/postgresql:15
     container_name: "sonarqube-db"
     restart: always
@@ -46,6 +56,7 @@ services:
       POSTGRESQL_DATABASE: sonarqube
 
   sonarqube:
+    <<: *default-logging
     image: sonarqube:8.9.7-community
     container_name: "sonarqube"
     restart: always
@@ -59,6 +70,7 @@ services:
       SONARQUBE_JDBC_URL: jdbc:postgresql://sonarqube-db:5432/sonarqube
 
   redmine-db:
+    <<: *default-logging
     image: postgres:12
     container_name: "redmine-db"
     restart: always
@@ -71,6 +83,7 @@ services:
       POSTGRES_DB: redmine_database
 
   redmine:
+    <<: *default-logging
     image: redmine:4.2.10
     container_name: "redmine"
     restart: always
@@ -88,6 +101,7 @@ services:
       REDMINE_SECRET_KEY_BASE: ${REDMINE_DB_PASSWORD}
 
   redis:
+    <<: *default-logging
     image: redis:6.2.11
     container_name: "redis"
     restart: always
@@ -98,6 +112,7 @@ services:
     command: redis-server /usr/local/etc/redis/redis.conf
 
   iii-devops-lite-db:
+    <<: *default-logging
     image: postgres:12
     container_name: "iii-devops-lite-db"
     restart: always
@@ -112,6 +127,7 @@ services:
       III_DB: devopsdb
 
   iii-devops-lite-api:
+    <<: *default-logging
     extends:
       file: docker-compose.iiidevops.yaml
       service: backend-base
@@ -130,6 +146,7 @@ services:
       - iii-devops-lite-log:/logs
 
   iii-devops-lite-api-worker:
+    <<: *default-logging
     extends:
       file: docker-compose.iiidevops.yaml
       service: backend-base
@@ -140,6 +157,7 @@ services:
     command: celery -A apis.api:celery worker -P eventlet --loglevel=INFO
   
   iii-devops-lite-api-beat:
+    <<: *default-logging
     extends:
       file: docker-compose.iiidevops.yaml
       service: backend-base
@@ -150,6 +168,7 @@ services:
     command: celery -A apis.api.celery beat --loglevel=INFO --schedule=/tmp/celerybeat-schedule
 
   iii-devops-lite-ui:
+    <<: *default-logging
     image: iiiorg/devops-lite-ui:0.0.8
     container_name: "iii-devops-lite-ui"
     restart: always
