--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,6 +126,12 @@ services:
       POSTGRES_DB: postgres
       III_DB: devopsdb
 
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   iii-devops-lite-api:
     <<: *default-logging
     extends:
@@ -134,11 +140,16 @@ services:
     container_name: "iii-devops-lite-api"
     restart: on-failure
     depends_on:
-      - gitlab
-      - sonarqube
-      - redmine
-      - redis
-      - iii-devops-lite-db
+      gitlab:
+        condition: service_started
+      sonarqube:
+        condition: service_started
+      redmine:
+        condition: service_started
+      redis:
+        condition: service_started
+      iii-devops-lite-db:
+        condition: service_healthy
     ports:
       - "${III_PORT}:10009"
     volumes:
