--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -189,6 +189,11 @@ services:
       - "80:80"
     environment:
       API_URL: http://iii-devops-lite-api:10009/
+    healthcheck:
+      test: curl --fail http://localhost/prod-api/swagger-ui/ || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   gitlab-data:
