--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -183,6 +183,8 @@ services:
     image: iiiorg/devops-lite-ui:0.0.9
     container_name: "iii-devops-lite-ui"
     restart: always
+    labels:
+      - "autoheal=true"
     depends_on:
       - iii-devops-lite-api
     ports:
