--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -189,7 +189,7 @@ services:
     ports:
       - "80:80"
     environment:
-      API_URL: http://iii-devops-lite-api:10009/
+      API_URL_LITE: http://iii-devops-lite-api:10009/
     healthcheck:
       test: curl --fail http://localhost/prod-api/swagger-ui/ || exit 1
       interval: 10s
