✨ Added DOCKER_SOCKET volume in docker-compose.iiidevops.yaml

--- a/docker-compose.iiidevops.yaml
+++ b/docker-compose.iiidevops.yaml
@@ -10,6 +10,7 @@ services:
     restart: always
     volumes:
       - ./HEAD.env:/env/HEAD.env
+      - ${DOCKER_SOCKET}:/var/run/docker.sock
     # We don't share depends_on with other services, because it's docker limit
     environment:
       SQLALCHEMY_HOST: iii-devops-lite-db:5432
