🐛 fix postgres config and healthcheck in docker-compose
The hard-coded user 'postgres' was removed to allow the use of environmental variables for the user configuration in the Docker compose for Postgres. The healthcheck test now uses 'pg_isready -U $POSTGRES_USER' instead of simply 'pg_isready' in order to accommodate this change.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -115,7 +115,6 @@ services:
     <<: *default-logging
     image: postgres:12
     container_name: "iii-devops-lite-db"
-    user: postgres
     restart: always
     ports:
       - "${III_DB_PORT}:5432"
@@ -127,7 +126,7 @@ services:
       POSTGRES_DB: postgres
 
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "bash -c 'pg_isready -U $POSTGRES_USER'" ]
       interval: 10s
       timeout: 5s
       retries: 5
