✨ Add SonarQube variable to .gitlab-ci.yml templates
Added new 'iiidevops: sonarqube' environment variable in several .gitlab-ci.yml configuration files. This change was made to establish a standard way of identifying SonarQube instances in our CI/CD pipeline across all project templates. Now, every job running in Gitlab CI will be aware of the SonarQube instance it needs to interface with, ensuring consistency and predictability throughout the pipeline execution.

--- a/templates/default-dev/.gitlab-ci.yml
+++ b/templates/default-dev/.gitlab-ci.yml
@@ -22,6 +22,7 @@ Test--SonarQube source code scan:
     name: iiiorg/sonarqube-runner:1.1.0
     entrypoint: [ "" ]
   variables:
+    iiidevops: sonarqube
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
   cache:
