🐛 Fix healthcheck command in docker-compose.yaml
The '$$' sign was added to the healthcheck command that tests Postgres database readiness to correctly interpret the shell syntax in the Docker configuration file. This will ensure correct interpretation of the $POSTGRES_USER syntax as a shell variable and not as a string literal, improving the health checking of the Postgres service in our docker system.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,7 +126,7 @@ services:
       POSTGRES_DB: postgres
 
     healthcheck:
-      test: [ "CMD-SHELL", "bash -c 'pg_isready -U $POSTGRES_USER'" ]
+      test: [ "CMD-SHELL", "bash -c 'pg_isready -U $$POSTGRES_USER'" ]
       interval: 10s
       timeout: 5s
       retries: 5
