🐛 Fix line change, setup flow

--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,11 @@ DOMAIN_CONJUNCTION="."
 DOMAIN_GITLAB="gitlab${DOMAIN_CONJUNCTION}${DOMAIN_BASE}"
 DOMAIN_REDMINE="redmine${DOMAIN_CONJUNCTION}${DOMAIN_BASE}"
 DOMAIN_SONARQUBE="sonarqube${DOMAIN_CONJUNCTION}${DOMAIN_BASE}"
+DOMAIN_UI="${DOMAIN_BASE}"
 URL_GITLAB="https://${DOMAIN_GITLAB}"
 URL_REDMINE="https://${DOMAIN_REDMINE}"
 URL_SONARQUBE="https://${DOMAIN_SONARQUBE}"
+URL_UI="https://${DOMAIN_UI}"
 
 # IP Mode
 IP_ADDRESS="" # The IP address of the server
@@ -37,6 +39,7 @@ PORT_REDMINE="32748"
 PORT_SONARQUBE="31910"
 PORT_III_DATABASE="31403"
 PORT_III_API="10009"
+PORT_III_UI="80"
 
 # Tokens
 REDMINE_API_KEY=""
