--- a/docker/docker-compose.base.yaml
+++ b/docker/docker-compose.base.yaml
@@ -189,6 +189,7 @@ services:
     ports:
       - "${III_PORT}:10009"
     volumes:
+      - ${III_ENV}:/env/HEAD.env
       - iii-devops-lite-file:/opt/nfs
       - iii-devops-lite-log:/logs
 
@@ -201,6 +202,8 @@ services:
       - redis
       - iii-devops-lite-api
     command: celery -A apis.api:celery worker -P eventlet --loglevel=INFO
+    volumes:
+      - ${III_ENV}:/env/HEAD.env
 
   iii-devops-lite-api-beat:
     <<: *default-logging
@@ -211,6 +214,8 @@ services:
       - redis
       - iii-devops-lite-api
     command: celery -A apis.api.celery beat --loglevel=INFO --schedule=/tmp/celerybeat-schedule
+    volumes:
+      - ${III_ENV}:/env/HEAD.env
 
   iii-devops-lite-ui:
     <<: *default-logging
