✨ Adjust pythonpath and file location in docker-compose files
Changes have been made in the 'iii-devops-lite-api' service to set PYTHONPATH in the command, ensuring that the correct path is used when running Celery. This was causing the Celery worker and beat services to fail unexpectedly as they were not able to locate the required files. In addition, the location of the HEAD.env file in the 'docker-compose.iiidevops.yaml' has been adjusted to correctly map the file in the Docker container.

--- a/docker-compose.iiidevops.yaml
+++ b/docker-compose.iiidevops.yaml
@@ -9,7 +9,7 @@ services:
     image: iiiorg/devops-lite-api:0.1.3
     restart: always
     volumes:
-      - ./HEAD.env:/env/HEAD.env
+      - ./HEAD.env:/usr/src/app/env/HEAD.env
       - ${DOCKER_SOCKET}:/var/run/docker.sock
     # We don't share depends_on with other services, because it's docker limit
     environment:
