--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -179,7 +179,7 @@ services:
 
   iii-devops-lite-ui:
     <<: *default-logging
-    image: iiiorg/devops-lite-ui:0.1.3
+    image: iiiorg/devops-lite-ui:ce-0.2.1
     container_name: "iii-devops-lite-ui"
     restart: always
     labels:
