✨ Downgrade level output and remove DB password set from user

--- a/.env.example
+++ b/.env.example
@@ -51,15 +51,15 @@ GITLAB_REGISTRATOR_TOKEN=""
 GITLAB_ROOT_PASSWORD="{{PASSWORD}}"
 GITLAB_PORT="32080"
 
-SQ_DB_PASSWORD="{{PASSWORD}}"
+SQ_DB_PASSWORD=""
 SQ_AM_PASSWORD="{{PASSWORD}}"
 SQ_PORT="31910"
 
-REDMINE_DB_PASSWORD="{{PASSWORD}}"
+REDMINE_DB_PASSWORD=""
 REDMINE_PORT="32748"
 
 III_DB_PORT="31403"
-III_DB_PASSWORD="{{PASSWORD}}"
+III_DB_PASSWORD=""
 
 III_PORT="10009"
 III_ADMIN_LOGIN="{{III_ADMIN_LOGIN}}"
